--- a/Login/src/main/resources/application.properties
+++ b/Login/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.boot.admin.client.url=http://localhost:8000
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.gmail.com
 spring.mail.username=kanaparthiphani0@gmail.com
-spring.mail.password=Kanaparthiphani@1
+spring.mail.password=
 spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.test-connection=false
